# job-finder

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CHECKLIST_INIZIALE_2_MIN.md  Dockerfile  JobFinder.spec  README.md  coverage.json  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: live-smoke.yml  release.yml  tests.yml
DOCS/: schema.md  security.md
app/: __init__.py  config.py  container.py  cv_ingest.py  db.py  log.py  main.py  models.py  notify.py  rate_limit.py  update_sync.py  version.py
app/migrations/: 001_init.py  002_chat_message_type.py  003_candidate_profile_hash.py  004_usage_log.py  006_job_dedup.py  007_job_reminder.py  008_saved_searches.py  009_usage_latency.py  010_jobs_list_index.py  011_orphan_cleanup.py  __init__.py
app/providers/: anthropic_provider.py  base.py  cerebras_provider.py  factory.py  google_provider.py  groq_provider.py  model_selector.py  openai_compat.py  openai_provider.py  openrouter_provider.py
app/routers/: __init__.py  chat.py  jobs.py  preferences.py  profile.py  providers.py  saved_searches.py  scan.py  scheduler.py  system.py
app/services/: autoscan.py  chat_service.py  generation.py  job_import.py  model_probe.py  model_stats.py  onboarding.py  pii.py  recruiter_scrape.py  roles_shortlist.py  scan_control.py  scanner_service.py  skill_gap.py  usage_tracker.py
scripts/: build_exe.py  bundle_LEGGIMI.txt  check_i18n.py  clean_dirty_data.py  install_tesseract_langs.py  launch_exe.py  seed_demo.py  update.py  updater.py
tests/e2e/: app.spec.js  chat-live-smoke.spec.js  chat-role-guidance.spec.js  chat-ui-enhancements.spec.js  live-cv-chat-search.spec.js  readme-cv-showcase.spec.js  readme-demo-gif.spec.js  readme-demo-screenshots.spec.js  (+1 more)
web/: app.js  index.html  styles.css
(+102 files in other folders)
